# heir

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MLIR_EXPORTED_TARGETS  WORKSPACE  basic_bgv.mlir  basic_lwe.mlir  basic_poly.mlir  basic_spoly.mlir  example.cpp  example.mlir  example_bgv.mlir  example_pisa.mlir  example_poly.mlir  example_poly_affine.mlir  example_poly_cleaned.mlir  example_poly_no_rns.mlir  example_poly_unrolled.mlir  example_secret.mlir  example_std.mlir  example_wrapped.mlir  tmp.mlir  tmp2.mlir
bazel/: import_llvm.bzl
cmake/: AddHEIR.cmake
frontend/: example.py
frontend/heir/: pipeline.py
frontend/heir/backends/openfhe/: backend.py
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Analysis/SelectVariableNames/: SelectVariableNames.cpp
lib/Conversion/ArithExtToArith/: ArithExtToArith.cpp  ArithExtToArith.td
lib/Conversion/PolynomialToPISA/: BUILD  PolynomialToPISA.cpp  PolynomialToPISA.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/ArithExt/IR/: ArithExtDialect.cpp  ArithExtOps.td
lib/Dialect/BGV/: CMakeLists.txt
lib/Dialect/BGV/Conversions/BGVToLWE/: CMakeLists.txt
lib/Dialect/BGV/Conversions/BGVToOpenfhe/: CMakeLists.txt
lib/Dialect/BGV/IR/: CMakeLists.txt
lib/Dialect/CGGI/Conversions/CGGIToJaxite/: CMakeLists.txt
lib/Dialect/CGGI/Conversions/CGGIToTfheRust/: CMakeLists.txt
lib/Dialect/CGGI/Conversions/CGGIToTfheRustBool/: CMakeLists.txt
lib/Dialect/CGGI/IR/: CMakeLists.txt
lib/Dialect/CGGI/Transforms/: CMakeLists.txt
lib/Dialect/CKKS/Conversions/CKKSToOpenfhe/: CMakeLists.txt
lib/Dialect/CKKS/IR/: CMakeLists.txt
lib/Dialect/Comb/Conversions/CombToCGGI/: CMakeLists.txt
lib/Dialect/LWE/: CMakeLists.txt
lib/Dialect/LWE/Conversions/LWEToOpenfhe/: CMakeLists.txt
lib/Dialect/LWE/Conversions/LWEToPolynomial/: CMakeLists.txt
lib/Dialect/LWE/Conversions/RlweToOpenfhe/: CMakeLists.txt
lib/Dialect/LWE/IR/: CMakeLists.txt  LWEEnums.td  NewLWEAttributes.td  NewLWEEnums.td
lib/Dialect/LWE/Transforms/: CMakeLists.txt
lib/Dialect/ModArith/IR/: ModArithDialect.cpp
lib/Dialect/PISA/IR/: BUILD  PISAAttributes.cpp  PISAAttributes.h  PISAAttributes.td  PISADialect.cpp  PISAOps.h  PISAOps.td  PISATypes.cpp  PISATypes.h  PISATypes.td
lib/Dialect/Polynomial/IR/: PolynomialOps.cpp  PolynomialOps.h  PolynomialOps.td
lib/Dialect/Polynomial/Transforms/: NTTRewrites.td
lib/Dialect/RNS/IR/: BUILD  RNSDialect.cpp  RNSOps.td  RNSTraits.h  RNSTraits.td
lib/Dialect/Secret/Conversions/SecretToBGV/: CMakeLists.txt
lib/Dialect/Secret/Conversions/SecretToCGGI/: CMakeLists.txt
lib/Dialect/Secret/Conversions/SecretToCKKS/: CMakeLists.txt
lib/Dialect/Secret/Transforms/: DistributeGeneric.cpp
lib/Source/AutoHog/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt
lib/Transforms/SelectRewrite/: BUILD  SelectRewrite.cpp  SelectRewrite.h  SelectRewrite.td
lib/Utils/ConversionUtils/: CMakeLists.txt
tests/Dialect/ModArith/IR/: syntax.mlir
tests/Emitter/heracles/: emit_heracles_sdk.mlir
tests/arith_ext/: arith-ext-to-arith.mlir  invalid-ops.mlir
tests/bgv/: to_polynomial.mlir
tests/pisa/: emit.mlir  ops.mlir  test.mlir  test_bgv.mlir  test_poly.mlir
tests/pisa/end_to_end/: BUILD  basic.mlir  test.bzl
tests/polynomial/: ntt_rewrites.mlir
tests/select_rewrite/: select_rewrite.mlir
tools/: BUILD  CMakeLists.txt  heir-lsp.cpp  heir-opt.cpp  heir-translate.cpp  toy-opt.cpp
